Fix social icons overflow in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6, strong { color: var(--bold-text-color); }
 }
 .about-me .social-icons a {
   display: inline-block;
-  padding: 15px;
+  padding: 12px;
 }
 .about-me .social-icons a:hover {
   filter: brightness(150%);
